--- a/TaskManager.DesktopClient/App.xaml
+++ b/TaskManager.DesktopClient/App.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TaskManager.DesktopClient"
              xmlns:prism="http://prismlibrary.com/">
+    <!--StartupUri="Views.LoginWindow.xaml">-->
     <!--StartupUri="Views.MainWindow.xaml">-->
     <Application.Resources>
         <ResourceDictionary>
