--- a/TaskManager.DesktopClient/Resources/Styles/MainStyleDictionaty.xaml
+++ b/TaskManager.DesktopClient/Resources/Styles/MainStyleDictionaty.xaml
@@ -9,6 +9,7 @@
         <GradientStop Color="#FF424242" Offset="2"/>
     </LinearGradientBrush>
     <FontStyle x:Key="WindowTextStyleForeground">Normal</FontStyle>
+    
     <Style TargetType="TextBox" 
         x:Key="CommonTextBoxStyle">
         <Setter Property="Foreground" Value="White"/>
@@ -17,9 +18,12 @@
         <Setter Property="FontStyle" Value="{StaticResource WindowTextStyleForeground}"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"></Setter>
         <Setter Property="BorderThickness" Value="0.5"/>
         <Setter Property="BorderBrush" Value="White"/>
+        <Setter Property="Height" Value="30"></Setter>
     </Style>
+    
     <Style TargetType="TextBlock" 
      x:Key="CommonTextBlockStyle">
         <Setter Property="Foreground" Value="White"/>
@@ -27,7 +31,10 @@
         <Setter Property="FontStyle" Value="{StaticResource WindowTextStyleForeground}"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="Height" Value="30"></Setter>
+        <Setter Property="FontSize" Value="14"/>
     </Style>
+    
     <Style TargetType="Label" 
  x:Key="CommonLabelStyle">
         <Setter Property="Foreground" Value="White"/>
@@ -35,6 +42,7 @@
         <Setter Property="FontStyle" Value="{StaticResource WindowTextStyleForeground}"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="Height" Value="30"></Setter>
     </Style>
 
     <Style TargetType="PasswordBox" 
@@ -45,16 +53,22 @@
         <Setter Property="FontStyle" Value="{StaticResource WindowTextStyleForeground}"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"></Setter>
         <Setter Property="BorderThickness" Value="0.5"/>
         <Setter Property="BorderBrush" Value="White"/>
+        <Setter Property="Height" Value="30"></Setter>
     </Style>
+    
     <Style x:Key="CommonButtonStyle"
            TargetType="Button">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="BorderBrush" Value="White"/>
+        <Setter Property="Height" Value="30"></Setter>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
     </Style>
+    
     <Style x:Key="CommonMenuStyle"
            TargetType="Menu">
         <Setter Property="Background" Value="Transparent"/>
@@ -62,6 +76,7 @@
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="BorderBrush" Value="White"/>
     </Style>
+    
     <Style x:Key="CommonMenuItemStyle"
            TargetType="MenuItem">
         <Setter Property="Background" Value="{Binding ElementName=WindowBackground}"/>
@@ -73,5 +88,28 @@
         <Setter Property="HorizontalContentAlignment" Value="Stretch"></Setter>
         <Setter Property="VerticalAlignment" Value="Stretch"></Setter>
         <Setter Property="VerticalContentAlignment" Value="Stretch"></Setter>
+    </Style>
+
+    <Style x:Key="CommonGridSplitterStyle" TargetType="GridSplitter">
+        <Setter Property="BorderThickness" Value="0,0,1,0"/>
+        <Setter Property="BorderBrush" Value="White"/>
+        <Setter Property="VerticalAlignment" Value="Stretch"/>
+        <Setter Property="Margin" Value="2"/>
+        <Setter Property="MinWidth" Value="200"/>
+        <Setter Property="Background" Value="Transparent"/>
+    </Style>
+
+    <Style x:Key="CommonBorderStyle" TargetType="Border">
+        <Setter Property="BorderBrush" Value="White"/>
+        <!--<Setter Property="VerticalAlignment" Value="Stretch"/>
+        <Setter Property="Margin" Value="2"/>
+        <Setter Property="MinWidth" Value="200"/>-->
+        <Setter Property="Background" Value="Transparent"/>
+    </Style>
+
+    <Style TargetType="TextBlock"
+           x:Key="TextBlockHeader"
+           BasedOn="{StaticResource CommonTextBlockStyle}">
+        <Setter Property="FontSize" Value="20"/>
     </Style>
 </ResourceDictionary>
