--- a/TaskManager.DesktopClient/Views/MainWindow.xaml
+++ b/TaskManager.DesktopClient/Views/MainWindow.xaml
@@ -4,13 +4,18 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TaskManager.DesktopClient"
-        xmlns:prism="http://prismlibrary.com/"
-        prism:ViewModelLocator.AutoWireViewModel="True"
         xmlns:loginPanels="clr-namespace:TaskManager.DesktopClient.Views.Components.LoginPanels"
+        xmlns:navButtonsUserControl="clr-namespace:TaskManager.DesktopClient.Views.Components.Buttons"
+        xmlns:dataContext="clr-namespace:TaskManager.DesktopClient.ViewModels"
         WindowStartupLocation="CenterScreen"
         mc:Ignorable="d"
         Background="{StaticResource WindowBackground}"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+
+        <dataContext:MainWindowViewModel x:Key="mainWindowDataContext"/>
+
+    </Window.Resources>
     <DockPanel Background="{StaticResource WindowBackground}" LastChildFill="True">
         <DockPanel DockPanel.Dock="Top" LastChildFill="True" Background="Transparent">
             <DockPanel DockPanel.Dock="Left" Background="Transparent" Block.LineHeight="35">
@@ -26,25 +31,133 @@
                         </MenuItem>
                         <MenuItem Header="Close" x:Name="MenuClose" Command="{Binding CloseApplicationCommand}"></MenuItem>
                     </MenuItem>
-                    
                     <MenuItem Header="Settings" Style="{StaticResource CommonMenuItemStyle}" Width="65" ></MenuItem>
                     <MenuItem Header="Help" Style="{StaticResource CommonMenuItemStyle}" Width="50"></MenuItem>
                     <MenuItem Header="About" Style="{StaticResource CommonMenuItemStyle}" Width="55"></MenuItem>
                 </Menu>
             </DockPanel>
-            <loginPanels:BaseLoginBarComponent DockPanel.Dock="Right"></loginPanels:BaseLoginBarComponent>
-            <!--<loginPanels:AuthorizedUserPanelComponent DockPanel.Dock="Right" Visibility="{Binding Path=AuthorizedPanelVisibility}"></loginPanels:AuthorizedUserPanelComponent>-->
-            <!--<loginPanels:BaseLoginBarComponent DockPanel.Dock="Right"></loginPanels:BaseLoginBarComponent>-->
-            <!--<StackPanel DockPanel.Dock="Right" Orientation="Horizontal" Height="30">
-                <Button Content="Register" Height="20" Width="70" Margin="0,0,5,0" Style="{StaticResource CommonButtonStyle}" Command="{Binding OpenRegisterWindowCommand}"></Button>
-                <Button Content="Log In" Height="20" Width="70" Margin="5,0,0,0" Style="{StaticResource CommonButtonStyle}"></Button>
-                <TextBox Width="150" Height="20" Margin="15,0,5,0" Style="{StaticResource CommonTextBoxStyle}"></TextBox>
-                <PasswordBox Width="120" Height="20" Margin="5,0,15,0" Style="{StaticResource CommonPaswordBoxStyle}"></PasswordBox>
-                <Button Width="0" Height="20"></Button>
-            </StackPanel>-->
+            <StackPanel DockPanel.Dock="Right">
+
+                
+                <!--<loginPanels:BaseLoginBarComponent/>-->
+
+
+            </StackPanel>
             <Label/>
         </DockPanel>
-        <StackPanel></StackPanel>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="230"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Border Grid.Column="0" Width="200" BorderThickness="0,0,1,1" VerticalAlignment="Stretch" Style="{StaticResource CommonBorderStyle}"/>
+            <StackPanel Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Stretch">
+                    <StackPanel VerticalAlignment="Stretch" Width="215">
+                    
+                    <Grid HorizontalAlignment="Stretch">
+                            <StackPanel>
+                                <StackPanel.Style>
+                                    <Style TargetType="StackPanel">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding CurrentUser}" Value="{x:Null}">
+                                                <Setter Property="Visibility" Value="Collapsed"/>
+                                                <Setter Property="Height" Value="0"/>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </StackPanel.Style>
+                                <ItemsControl ItemsSource="{Binding ProfileButtons}">
+
+
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <Button Style="{StaticResource CommonButtonStyle}" Command="{Binding Value}">
+                                                <TextBlock Style="{StaticResource CommonTextBlockStyle}" Text="{Binding Key}"/>
+                                            </Button>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+
+                                </ItemsControl>
+                            </StackPanel>
+
+                        </Grid>
+                    
+                    <Grid>
+                            <StackPanel>
+                                <StackPanel.Style>
+                                    <Style TargetType="StackPanel">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding CurrentUser}" Value="{x:Null}">
+                                                <Setter Property="Visibility" Value="Collapsed"/>
+                                                <Setter Property="Height" Value="0"/>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </StackPanel.Style>
+                                <TextBlock Style="{StaticResource CommonTextBlockStyle}" Text="{Binding CollectiveProjectsLabelString}"/>
+
+                                <ItemsControl ItemsSource="{Binding OnlineUserNavButtons}" x:Name="onlineNavButonsUserControlPanel">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+
+
+                                            <navButtonsUserControl:NavButtonComponent Margin="3,1,3,1" DataContext="{DynamicResource mainWindowDataContext.NavButtons}"/>
+
+
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+                            </StackPanel>
+
+                        </Grid>
+
+                        <Grid>
+                            <StackPanel>
+                                <StackPanel.Style>
+                                    <Style TargetType="StackPanel">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding LocalUser}" Value="{x:Null}">
+                                                <Setter Property="Visibility" Value="Collapsed"/>
+                                                <Setter Property="Height" Value="0"/>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </StackPanel.Style>
+                                <TextBlock Style="{StaticResource CommonTextBlockStyle}" Text="{Binding CollectiveProjectsLabelString}"/>
+                                <ItemsControl ItemsSource="{Binding LocalUserNavButtons}" x:Name="localNavButonsUserControlPanel">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+
+
+                                            <navButtonsUserControl:NavButtonComponent Margin="3,1,3,1" DataContext="{DynamicResource mainWindowDataContext.NavButtons}"/>
+
+
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+                            </StackPanel>
+
+                        </Grid>
+                    </StackPanel>
+
+            </StackPanel>
+            <Grid Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Stretch">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="30"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="10"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="10"/>
+                </Grid.ColumnDefinitions>
+                <Border Grid.Row="0" Grid.Column="1" Margin="-50,0,0,0" BorderThickness="1,0,0,2" Style="{StaticResource CommonBorderStyle}" HorizontalAlignment="Stretch"/>
+                <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding SelectedPageName}" Style="{StaticResource TextBlockHeader}" HorizontalAlignment="Stretch"/>
+                <Frame Grid.Row="1" Grid.Column="1" NavigationUIVisibility="Hidden" Content="{Binding SelectedPage}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"/>
+                <Border Grid.Row="1" Grid.Column="1" Margin="-50,0,0,0" BorderThickness="1,1,0,0" Style="{StaticResource CommonBorderStyle}" HorizontalAlignment="Stretch"/>
+            </Grid>
+        </Grid>
        
     </DockPanel>
 </Window>
