--- a/TaskManager.DesktopClient/Views/MainWindow.xaml
+++ b/TaskManager.DesktopClient/Views/MainWindow.xaml
@@ -10,7 +10,7 @@
         WindowStartupLocation="CenterScreen"
         mc:Ignorable="d"
         Background="{StaticResource WindowBackground}"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="650" Width="1200">
     <Window.Resources>
 
         <dataContext:MainWindowViewModel x:Key="mainWindowDataContext"/>
@@ -148,14 +148,15 @@
                     <RowDefinition Height="30"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="10"/>
+                    <ColumnDefinition Width="40"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="10"/>
                 </Grid.ColumnDefinitions>
-                <Border Grid.Row="0" Grid.Column="1" Margin="-50,0,0,0" BorderThickness="1,0,0,2" Style="{StaticResource CommonBorderStyle}" HorizontalAlignment="Stretch"/>
+                <!--<Border Grid.Row="0" Grid.Column="1" Margin="5" BorderThickness="1,0,0,2" Style="{StaticResource CommonBorderStyle}" HorizontalAlignment="Left"/>-->
                 <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding SelectedPageName}" Style="{StaticResource TextBlockHeader}" HorizontalAlignment="Stretch"/>
-                <Frame Grid.Row="1" Grid.Column="1" NavigationUIVisibility="Hidden" Content="{Binding SelectedPage}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"/>
-                <Border Grid.Row="1" Grid.Column="1" Margin="-50,0,0,0" BorderThickness="1,1,0,0" Style="{StaticResource CommonBorderStyle}" HorizontalAlignment="Stretch"/>
+                <Frame Grid.Row="1" Grid.Column="1" NavigationUIVisibility="Hidden" Content="{Binding SelectedPage}" IsEnabled="True" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"/>
+                <!--NavigationUIVisibility="Hidden"-->
+                <!--<Border Grid.Row="1" Grid.Column="1" Margin="-50,0,0,0" BorderThickness="1,1,0,0" Style="{StaticResource CommonBorderStyle}" HorizontalAlignment="Stretch"/>-->
             </Grid>
         </Grid>
        
