--- a/TaskManager.DesktopClient/Views/Pages/EditUserPage.xaml
+++ b/TaskManager.DesktopClient/Views/Pages/EditUserPage.xaml
@@ -1,19 +1,18 @@
-﻿<Page x:Class="TaskManager.DesktopClient.Views.Pages.UserInfoPage"
+﻿<Page x:Class="TaskManager.DesktopClient.Views.Pages.EditUserPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TaskManager.DesktopClient.Views.Pages"
-      mc:Ignorable="d"
-      HorizontalAlignment="Stretch"
-      Title="UserInfoPage">
+      mc:Ignorable="d" 
+      Title="EditUserPage">
 
     <Grid HorizontalAlignment="Stretch">
         <StackPanel HorizontalAlignment="Stretch" 
                     VerticalAlignment="Center">
 
             <StackPanel Orientation="Horizontal">
-                
+
                 <Image Grid.Column="0" x:Name="mainImage" 
                        Width="200" 
                        Height="200" 
@@ -34,9 +33,9 @@
                         <TextBlock Text="{Binding CurrentUser.UserStatus}" 
                                    Style="{StaticResource CommonTextBlockStyle}"/>
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal" Visibility="Hidden">
-                        <Button Content="change email" IsEnabled="False" Style="{StaticResource CommonButtonStyle}" Padding="5,0,5,0" Margin="5"/>
-                        <Button Content="change password" IsEnabled="False" Style="{StaticResource CommonButtonStyle}" Padding="5,0,5,0" Margin="5"/>
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="change email" Style="{StaticResource CommonButtonStyle}" Padding="5,0,5,0" Margin="5"/>
+                        <Button Content="change password" Style="{StaticResource CommonButtonStyle}" Padding="5,0,5,0" Margin="5"/>
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
@@ -47,49 +46,58 @@
 
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Name:  " 
-                           Style="{StaticResource CommonTextBlockStyle}"/>
-                <TextBlock Text="{Binding CurrentUser.Name}" 
-                           Style="{StaticResource CommonTextBlockStyle}"/>
+                           Style="{StaticResource CommonTextBlockStyle}" 
+                           VerticalAlignment="Bottom"/>
+                <TextBox Text="{Binding CurrentUser.Name}" 
+                           Style="{StaticResource CommonTextBoxStyle}" 
+                         Padding="45,0,45,0"
+                         VerticalAlignment="Top" 
+                         VerticalContentAlignment="Top"/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Last Name:  " 
-                           Style="{StaticResource CommonTextBlockStyle}"/>
-                <TextBlock Text="{Binding CurrentUser.LastName}" 
-                           Style="{StaticResource CommonTextBlockStyle}"/>
+                           Style="{StaticResource CommonTextBlockStyle}" VerticalAlignment="Bottom"/>
+                <TextBox Text="{Binding CurrentUser.LastName}" 
+                           Style="{StaticResource CommonTextBoxStyle}" 
+                         Padding="45,0,45,0" 
+                         VerticalAlignment="Top" 
+                         VerticalContentAlignment="Top"/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Phone:  " 
-                           Style="{StaticResource CommonTextBlockStyle}"/>
-                <TextBlock Text="{Binding CurrentUser.Phone}" 
-                           Style="{StaticResource CommonTextBlockStyle}"/>
+                           Style="{StaticResource CommonTextBlockStyle}" VerticalAlignment="Bottom"/>
+                <TextBox Text="{Binding CurrentUser.Phone}" 
+                           Style="{StaticResource CommonTextBoxStyle}" 
+                         Padding="45,0,45,0" 
+                         VerticalAlignment="Top" 
+                         VerticalContentAlignment="Top"/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Account created: " 
-                           Style="{StaticResource CommonTextBlockStyle}"/>
+                           Style="{StaticResource CommonTextBlockStyle}" VerticalAlignment="Bottom"/>
                 <TextBlock Text="{Binding DateFormat}" 
                            Style="{StaticResource CommonTextBlockStyle}"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" 
                         HorizontalAlignment="Center"
                         Margin="5">
-                
-                <Button Content="Edit" 
+
+                <Button Content="Save" 
                         Margin="10,0,5,0" 
-                        Command="{Binding EditUserPageCommand}"
                         Style="{StaticResource CommonButtonStyle}" 
                         HorizontalAlignment="Center" 
                         HorizontalContentAlignment="Center" 
                         Width="100"/>
-                
-                <Button Content="Delete" 
-                        Margin="5,0,10,0"
-                        
+
+                <Button Content="Cancel" 
+                        Margin="5,0,10,0" 
                         Style="{StaticResource CommonButtonStyle}" 
                         HorizontalAlignment="Center" 
-                        HorizontalContentAlignment="Center" 
+                        HorizontalContentAlignment="Center"
+                        Command="{Binding OpenMyInfoPageCommand}"
                         Width="100"/>
             </StackPanel>
         </StackPanel>
